--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,12 @@
 asgiref==3.5.2
-attrs==22.1.0
-Django==4.1.2
-djangorestframework==3.14.0
-drf-spectacular==0.24.2
-inflection==0.5.1
-jsonschema==4.17.0
-pip==21.3.1
-pyrsistent==0.19.2
-pytz==2022.6
-PyYAML==6.0
-setuptools==60.2.0
+Django==4.1.3
+pip==21.1.2
+setuptools==57.0.0
 sqlparse==0.4.3
-uritemplate==4.1.1
-wheel==0.37.1
+tzdata==2022.7
+wheel==0.36.2
+pillow
+djangorestframework==3.14.0
+django-environ
+drf-spectacular==0.24.2
+uwsgi
